회원가입 거의다함! 스크롤이벤트 만지작중

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 10/9 : 회원가입 작업
-10/10 : 이메일 중복체크 - js 처리중, click 했을 때 처리
+10/10 : 이메일 중복체크 - js 처리중, click 했을 때 처리 - clear
+10/11 : JoinBtn 클릭시 입력안된곳으로 스크롤 이동
