--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@
 10/12 : 로그인하기, 로그인 다음 화면구상 - clear
 10/12 - 10/18 : schedule, 페이징 - clear
 10/18 : schedule Detail 작업
+10/19 : Detail 요소 불러오기 +(커서 위치), update 작성
