--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,6 @@
 10/21 : schedule 작업 끝..
 ~ 10/26 : home 화면 작업
 10/27 ~ : report 작업 - 개인 일주일, 월별 데이터 출력
-
+10/28 : 월별 스케줄 건수 chart로 표현
 
 남은 일 : profile(회원정보수정, 탈퇴), login(비번 암호화), 관리자 form(chart, 회원관리)
