--- a/TODO.txt
+++ b/TODO.txt
@@ -6,8 +6,11 @@
 10/18 : schedule Detail 작업 - clear
 10/19 : Detail 요소 불러오기 +(커서 위치), update 작성 - clear
 10/21 : schedule 작업 끝..
-~ 10/26 : home 화면 작업
-10/27 ~ : report 작업 - 개인 일주일, 월별 데이터 출력
-10/28 : 월별 스케줄 건수 chart로 표현
-10/30 : localStorage로 새로고침 데이터 안변하게함
-남은 일 : profile(회원정보수정, 탈퇴), login(비번 암호화), 관리자 form(chart, 회원관리)
+~ 10/26 : home 화면 작업  - clear
+10/27 ~ : report 작업 - 개인 일주일, 월별 데이터 출력  - clear
+10/28 : 월별 스케줄 건수 chart로 표현 (날짜 보완필요)
+10/30 : localStorage로 새로고침 데이터 안변하게함 - clear
+11/1 : 비밀번호 암호화, 매칭 check - clear
+11/2 : 아이디별 데이터 매칭시키기..
+
+남은 일 : profile(회원정보수정, 탈퇴), 관리자 form(chart, 회원관리)
