--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,10 @@
 10/28 : 월별 스케줄 건수 chart로 표현 (날짜 보완필요)
 10/30 : localStorage로 새로고침 데이터 안변하게함 - clear
 11/1 : 비밀번호 암호화, 매칭 check - clear
-11/2 : 아이디별 데이터 매칭시키기..
-
+11/2 : 아이디별 데이터 매칭시키기 - clear
+11/4 : 이메일 수정 인증방법 생각중(
+            1. 다른계정의 이메일을 삭제
+            2. 다른 계정과 동일 이메일 소유
+            3. 그냥 불가
+       )
 남은 일 : profile(회원정보수정, 탈퇴), 관리자 form(chart, 회원관리)
