아이디 비밀번호찾기, 비밀번호수정, profile 수정 구현

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,7 +8,7 @@
 10/21 : schedule 작업 끝..
 ~ 10/26 : home 화면 작업  - clear
 10/27 ~ : report 작업 - 개인 일주일, 월별 데이터 출력  - clear
-10/28 : 월별 스케줄 건수 chart로 표현 (날짜 보완필요)
+10/28 : 월별 스케줄 건수 chart로 표현 (날짜 보완필요) - clear
 10/30 : localStorage로 새로고침 데이터 안변하게함 - clear
 11/1 : 비밀번호 암호화, 매칭 check - clear
 11/2 : 아이디별 데이터 매칭시키기 - clear
@@ -16,5 +16,5 @@
             1. 다른계정의 이메일을 삭제
             2. 다른 계정과 동일 이메일 소유
             3. 그냥 불가
-       )
+       ) - 2번선택. 어짜피 이메일 인증안되면 소유못함. - clear
 남은 일 : profile(회원정보수정, 탈퇴), 관리자 form(chart, 회원관리)
